--- a/ui/src/material-theme.scss
+++ b/ui/src/material-theme.scss
@@ -35,3 +35,13 @@ body {
   margin: 0;
   height: 100%;
 }
+
+
+// Customize the entire app. Change :root to your selector if you want to scope the styles.
+:root {
+  @include mat.fab-overrides((
+    small-container-color: #d9534f,
+    small-foreground-color: #ffffff,
+    container-elevation-shadow: -4px -4px 5px 0px rgba(0, 0, 0, 0.5),
+  ));
+}
