Format timestamp displays using Angular's `date:'medium'` pipe in `SightingBasicDetailsComponent` and `SightingsComponent`; add `DatePipe` to `SightingBasicDetailsComponent` imports.

--- a/ui/src/app/private/sighting-basic-details/sighting-basic-details.component.html
+++ b/ui/src/app/private/sighting-basic-details/sighting-basic-details.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>{{ sighting().sightingId }}</div>
-  <div>{{ sighting().timestamp }}</div>
+  <div>{{ sighting().timestamp | date:'medium' }}</div>
   <div>Latitude: {{ sighting().details.lat }}</div>
   <div>Longitude: {{ sighting().details.lng }}</div>
 </div>
