--- a/ui/src/app/private/sightings/sightings.component.html
+++ b/ui/src/app/private/sightings/sightings.component.html
@@ -40,7 +40,7 @@
 
         <ng-container matColumnDef="timestamp">
           <td mat-cell *matCellDef="let row">
-            {{ row.timestamp | date:'yyyy-MM-dd HH:mm:ss' }}
+            {{ row.timestamp | date:'medium' }}
           </td>
         </ng-container>
 
